src/main/java/org/example/interpreter/error/ObjectDoesNotSupportMethodCallsException.java
package org.example.interpreter.error;

import lombok.AccessLevel;
import lombok.EqualsAndHashCode;
import lombok.Getter;
import lombok.ToString;
import lombok.experimental.FieldDefaults;

@Getter
@EqualsAndHashCode(callSuper = true)
@ToString(callSuper = true)
@FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
public class ObjectDoesNotSupportMethodCallsException extends CriticalInterpreterException {
}
